--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
 
 <!-- <list-fruit></list-fruit> -->
 
-<!-- <list-student></list-student> -->
+<list-student></list-student>
 
-<todo-parent></todo-parent>
+<!-- <todo-parent></todo-parent> -->
