--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,6 @@
 <!-- <list-student></list-student> -->
 
 <!-- <todo-parent></todo-parent> -->
-<book-add></book-add>
+<!-- <book-add></book-add> -->
+<!-- <book-edit></book-edit> -->
+<parent></parent>
