--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1>Hi, {{ title }}</h1>
+<header></header>
+<!-- <h1>Hi, {{ title }}</h1> -->
 <!-- String interpolation - {{ }} -->
 <!-- <display></display> -->
 <!-- <counter></counter>
@@ -12,4 +13,5 @@
 <!-- <todo-parent></todo-parent> -->
 <!-- <book-add></book-add> -->
 <!-- <book-edit></book-edit> -->
-<parent></parent>
+<!-- <parent></parent> -->
+<router-outlet></router-outlet>
