--- a/src/app/book/book-add/book-add.component.html
+++ b/src/app/book/book-add/book-add.component.html
@@ -41,7 +41,7 @@
                 type="text"
                 class="form-control"
                 id="bAuthorId"
-                ngModel
+                [(ngModel)]="formData.bookAuthorId"
                 name="bookAuthorId"
                 #boAuthor="ngModel"
                 (change)="display(boAuthor)"
