--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -7,7 +7,9 @@
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="todo" routerLinkActive="active" router>Todo</a>
+        <a class="nav-link" routerLink="todo" routerLinkActive="active" router
+          >Todo</a
+        >
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="list-student" routerLinkActive="active"
@@ -21,6 +23,11 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="book" routerLinkActive="active">Book</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="book-http" routerLinkActive="active"
+          >Book Http</a
+        >
       </li>
     </ul>
   </div>
