--- a/src/app/book-http/book-add-http/book-add-http.component.html
+++ b/src/app/book-http/book-add-http/book-add-http.component.html
@@ -1,7 +1,5 @@
 <div class="container">
-  <!-- <h2 #tem>Book Add</h2>
-    <button type="button" (click)="display(tem)">click</button>
-    <h3>printing template variable : {{ tem }}</h3> -->
+  <h4 class="text-danger mx-5">{{ errorMessage }}</h4>
   <div class="row">
     <div class="col-2"></div>
     <div #mydiv class="col-8">
