--- a/src/app/book-http/book-edit-http/book-edit-http.component.html
+++ b/src/app/book-http/book-edit-http/book-edit-http.component.html
@@ -2,6 +2,7 @@
   <!-- <h2 #tem>Book Add</h2>
       <button type="button" (click)="display(tem)">click</button>
       <h3>printing template variable : {{ tem }}</h3> -->
+  <h4 class="text-danger my-5">{{ errorMessage }}</h4>
   <div class="row">
     <div class="col-2"></div>
     <div class="col-8">
