--- a/src/app/book-http/book-list-http/book-list-http.component.html
+++ b/src/app/book-http/book-list-http/book-list-http.component.html
@@ -1,4 +1,5 @@
 <div class="container m-3">
+  <h4 class="text-danger mx-5">{{ errorMessage }}</h4>
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-12" *ngFor="let eachBook of allBooks">
       <div class="card m-2">
